--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
   <!-- style sheet -->
-  <link rel="stylesheet" href="assets/style-sheet/style.scss">
+  <link rel="stylesheet" href="assets/style-sheet/style.css">
 
   <!-- Script -->
   <script src="assets/scripts/carrousel.js" async></script>
