--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <div class="presentation">
     <div class="presentation-container">
       <div class="presentation-text">
+        <p>Work in progerss !</p>
         <p>Hello, I'm Eno LEROY </p>
         <p>
           I'm a Junior Web Developper, currently looking for a working oportunity.
