--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 </head>
 <body class="roboto-condensed-font">
   <div class="navbar handjet-font">
-    <p>> Home</p>
-    <p>> Projects</p>
-    <p>> Interets</p>
-    <p>> CV</p>
+    <a href="#presentation">> Home</a>
+    <a href="#projects">> Projects</a>
+    <a href="#interets">> Interets</a>
+    <a href="#cv">> CV</a>
   </div>
 
 
-  <div class="presentation">
+  <div class="presentation" id="presentation">
     <div class="presentation-container">
       <div class="presentation-text">
         <p>Work in progerss !</p>
@@ -54,7 +54,7 @@
     </div>
   </div>
   
-  <div class="projects">
+  <div class="projects" id="projects">
     <!-- Élément carrousel -->
     <div class="carousel">
         <!-- Conteneur interne pour les diapositives -->
@@ -106,11 +106,21 @@
   </div>
 
 
-  <div class="interets">
+  <div class="interets" id="interets">
     <h2 class="anton-regular">Interets</h2>
+    <div class="project-card">
+      <div>
+        <h4>Titre</h4>
+        <p>description</p>
+      </div>
+      <div class="image-container">
+        <img src="assets/images/home-image-2.png" alt="Project 1">
+
+      </div>
+    </div>
   </div>
 
-  <div class="cv">
+  <div class="cv" id="cv">
     CV
     <!-- telechargement CV  -->
     <!-- <a href="fichier.pdf" download  >télécharger</a> -->
