--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           Monster Slicer
         </div>  
       </a>
-      <a href="project-monster-slicer.html" class="project-card" style="background-image: url('assets/images/sudoku1.png');"> 
+      <a href="project-sudoku-solver.html" class="project-card" style="background-image: url('assets/images/sudoku1.png');"> 
         <div class="blur playfair-display-font">
           Sudoku Solver
         </div>  
