--- a/project-monster-slicer.html
+++ b/project-monster-slicer.html
@@ -45,7 +45,7 @@
           <li>Phaser.js : Utilisé pour gérer la physique, les animations et les interactions du jeu.</li>
           <li>Ruby on Rails: Pour le développement du site.</li>
         </ul>
-        <p>Ce projet nous a confrontés à la documentation technique de Phaser.js, nous poussant à apprendre de manière autonome et à résoudre des défis techniques. De plus, nous avons exploré l'univers du développement de jeux vidéo notament les problematiques de level design et de logiques de gameplay. </p>
+        <p>Ce projet nous a confronté à la documentation technique de Phaser.js, nous poussant à apprendre de manière autonome et à résoudre des défis techniques. De plus, nous avons exploré l'univers du développement de jeux vidéo notament les problematiques de level design et de logiques de gameplay. </p>
       </div>
       <div class="image-container">
         <div class="video-container">
