projet atout du dirigent et random fixes

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 </head>
 <body class="playfair-display-font">
   <div class="navbar">
-    <a href="index.html#presentation">> Home</a>
-    <a href="index.html#projects">> Projects</a>
-    <a href="index.html#interets">> Interets</a>
+    <a href="index.html#presentation">> Acceuil</a>
+    <a href="index.html#projects">> Projets</a>
+    <a href="index.html#interets">> Intérets</a>
     <a href="index.html#cv">> CV</a>
   </div>
 
@@ -38,7 +38,7 @@
     <div class="presentation-container">
       <div class="presentation-text">
         <p>
-          Je suis Eno, développeur web junior passionné. Avec des compétences en HTML, CSS et JavaScript, je crée des sites web dynamiques et intuitifs. Toujours en quête de nouveaux défis, je suis prêt à collaborer sur des projets passionnants.
+          Je suis Eno LEROY, développeur web junior passionné. Avec des compétences en HTML, CSS et JavaScript ainsi que sur le framework Ruby on Rails. Toujours en quête de nouveaux défis, je suis prêt à collaborer sur des projets passionnants.
         </p>
         <p>
           N’hésitez pas à explorer mon travail et à me contacter !
@@ -71,7 +71,7 @@
           Sudoku Solver
         </div>  
       </a>
-      <a href="project-monster-slicer.html" class="project-card" style="background-image: url('assets/images/monster-slicer2.png');"> 
+      <a href="project-atout-du-dirigeant.html" class="project-card" style="background-image: url('assets/images/atout-du-dirigeant1.jpeg');"> 
         <div class="blur playfair-display-font">
           Atout du dirigeant
         </div>  
