--- a/project-atout-du-dirigeant.html
+++ b/project-atout-du-dirigeant.html
@@ -17,7 +17,7 @@
 
 
   <!-- style sheet -->
-  <link rel="stylesheet" href="assets/style-sheet/project-monster-slicer-style.css">
+  <link rel="stylesheet" href="assets/style-sheet/project-atout-du-dirigeant.css">
   <link rel="stylesheet" href="assets/style-sheet/navbar.css">
   <link rel="stylesheet" href="assets/style-sheet/button.css">
 
@@ -34,37 +34,29 @@
     <a href="index.html#cv">> CV</a>
   </div>
 
-  
+
   <div class="project-card">
     <a href="project-sudoku-solver.html">
+      <button class="previus">
+        Précedent
+      </button>
+    </a>
+    <!-- <a href="project-atout-du-dirigeant.html">
       <button class="next">
         Suivant
       </button>
-    </a>
-
-    <h4>Monster Slicer The Game</h4>
+    </a> -->
+    <h4>Atout du Dirigeant</h4>
     <div class="project-card-content">
       <div>
-        <p>Projet réalisé en groupe de quatre personnes, dans le cadre du Bootcamp LE WAGON, où nous avons développé un jeu vidéo en utilisant la bibliothèque Phaser.js. Ce projet a été l'occasion de mettre en pratique nos compétences en programmation, design graphique et travail d'équipe.</p>
-        <p>Le jeu, intitulé "Monster Slicer", est un jeu d'arcade en 2D, dans un style pixel art, où le joueur doit éliminer le plus de monstres possible.</p>
-        <p>Technologies Utilisées :</p>
-        <ul>
-          <li>Phaser.js : Utilisé pour gérer la physique, les animations et les interactions du jeu.</li>
-          <li>Ruby on Rails: Pour le développement du site.</li>
-        </ul>
-        <p>Ce projet nous a confronté à la documentation technique de Phaser.js, nous poussant à apprendre de manière autonome et à résoudre des défis techniques. De plus, nous avons exploré l'univers du développement de jeux vidéo notament les problematiques de level design et de logiques de gameplay. </p>
+        <p>"Atout du dirigeant" est un projet de site internet dédié aux ressources humaines, visant à faciliter la mise en relation entre les entreprises et les candidats. Ce site avait pour objectif de simplifier le processus de recrutement en offrant une plateforme intuitive pour publier des offres d'emploi et candidater.</p>
+
+        <p>Le projet a été réalisé avec Ruby on Rails, avec une attention particulière portée à la conception et à la réalisation de la page d'accueil. Malheureusement, le projet n'a pas abouti en raison de contraintes économiques. Cependant, cette expérience a été très enrichissante pour moi, car elle m'a permis de réfléchir à de nombreuses fonctionnalités, même si elles n'ont pas été implantées. J'ai également eu l'opportunité de collaborer avec les personnes qui m'ont commissionné pour le design et la réalisation du logo, ce qui a été un aspect précieux de cette aventure.</p>
       </div>
       <div class="image-container">
-        <div class="video-container">
-  
-          <video width="400" controls autoplay muted loop>
-            <source src="assets/videos/monster-slicer1.mov" type="video/mp4">
-          </video>
-          
-          
-        </div>
+        <img src="assets/images/atout-du-dirigeant2.png" alt="Sudoku solver 1">
       </div>
-  
+
     </div>
 
   </div>
