--- a/project-sudoku-solver.html
+++ b/project-sudoku-solver.html
@@ -19,6 +19,7 @@
   <!-- style sheet -->
   <link rel="stylesheet" href="assets/style-sheet/project-sudoku-solver.css">
   <link rel="stylesheet" href="assets/style-sheet/navbar.css">
+  <link rel="stylesheet" href="assets/style-sheet/button.css">
 
   <!-- Script -->
   <script src="assets/scripts/carrousel.js" async></script>
@@ -27,14 +28,24 @@
 </head>
 <body class="playfair-display-font">
   <div class="navbar">
-    <a href="index.html#presentation">> Home</a>
-    <a href="index.html#projects">> Projects</a>
-    <a href="index.html#interets">> Interets</a>
+    <a href="index.html#presentation">> Acceuil</a>
+    <a href="index.html#projects">> Projets</a>
+    <a href="index.html#interets">> Intérets</a>
     <a href="index.html#cv">> CV</a>
   </div>
 
 
   <div class="project-card">
+    <a href="project-monster-slicer.html">
+      <button class="previus">
+        Précedent
+      </button>
+    </a>
+    <a href="project-atout-du-dirigeant.html">
+      <button class="next">
+        Suivant
+      </button>
+    </a>
     <h4>Sudoku Solver</h4>
     <div class="project-card-content">
       <div>
