partie CV, buttons, liens projet and minor fixes

--- a/project-monster-slicer.html
+++ b/project-monster-slicer.html
@@ -53,6 +53,16 @@
           <li>Ruby on Rails: Pour le développement du site.</li>
         </ul>
         <p>Ce projet nous a confronté à la documentation technique de Phaser.js, nous poussant à apprendre de manière autonome et à résoudre des défis techniques. De plus, nous avons exploré l'univers du développement de jeux vidéo notament les problematiques de level design et de logiques de gameplay. </p>
+        <a href="https://github.com/tcosse/monster_slicer">
+          <button>
+            Repo GitHub du projet de groupe
+          </button>
+        </a>
+        <a href="">
+          <button>
+            Page statique du jeu en JavaScript
+          </button>
+        </a>
       </div>
       <div class="image-container">
         <div class="video-container">
