--- a/project-sudoku-solver.html
+++ b/project-sudoku-solver.html
@@ -54,6 +54,11 @@
         <p>L'interface en ligne de commande fournit une visualisation claire de la grille et des possibilités grâce à une représentation ASCII. L'algorithme de résolution est basé sur de la programation orientée objet.</p>
         <p>Ce projet a été réalisé pour mettre en pratique des concepts d'algorithmique et de logique avec Ruby.</p>
         <p>Le solver de Sudoku représente une expérience enrichissante qui illustre ma capacité à créer des applications fonctionnelles et logiques. En plus de démontrer mes compétences en Ruby, ce projet reflète ma passion pour la résolution de problèmes. La visualisation ASCII améliore l'expérience utilisateur.</p>
+        <a href="https://github.com/EnoLEROY/sudoku_solver">
+          <button>
+            Repo GitHub
+          </button>
+        </a>
       </div>
       <div class="image-container">
         <img src="assets/images/sudoku-solver1.png" alt="Sudoku solver 1">
