--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eno LEROY · Web Developper</title>
 
   <!-- Fonts -->
@@ -160,7 +160,7 @@
     <!-- telechargement CV  -->
     <!-- <a href="fichier.pdf" download  >télécharger</a> -->
     <a href="assets/other/Eno LEROY - CV - 2024.pdf">
-      <button class="next">
+      <button>
         Télécharger mon CV
       </button>
     </a>
