--- a/project-atout-du-dirigeant.html
+++ b/project-atout-du-dirigeant.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eno LEROY · Web Developper</title>
 
   <!-- Fonts -->
@@ -41,6 +41,7 @@
         Précedent
       </button>
     </a>
+    <p style="color: rgba(240, 248, 255, 0);">.</p>
     <!-- <a href="project-atout-du-dirigeant.html">
       <button class="next">
         Suivant
