--- a/project-sudoku-solver.html
+++ b/project-sudoku-solver.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eno LEROY · Web Developper</title>
 
   <!-- Fonts -->
@@ -46,6 +46,7 @@
         Suivant
       </button>
     </a>
+    <p style="color: rgba(240, 248, 255, 0);">.</p>
     <h4>Sudoku Solver</h4>
     <div class="project-card-content">
       <div>
