--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="navbar">
     <a href="index.html#presentation">> Acceuil</a>
     <a href="index.html#projects">> Projets</a>
-    <a href="index.html#interets">> Intérets</a>
+    <a href="index.html#interets">> Intérêts</a>
     <a href="index.html#cv">> CV</a>
   </div>
 
@@ -88,7 +88,7 @@
 
 
   <div class="interets" id="interets">
-    <h2 class="title-h2">Interets</h2>
+    <h2 class="title-h2">Intérêts</h2>
     <div class="project-card">
       <div>
         <h4>Titre</h4>
