--- a/project-sudoku-solver.html
+++ b/project-sudoku-solver.html
@@ -30,7 +30,7 @@
   <div class="navbar">
     <a href="index.html#presentation">> Acceuil</a>
     <a href="index.html#projects">> Projets</a>
-    <a href="index.html#interets">> Intérets</a>
+    <a href="index.html#interets">> Intérêts</a>
     <a href="index.html#cv">> CV</a>
   </div>
 
