debut de metadonnées

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eno LEROY · Web Developper</title>
 
+  <meta property="og:title" content="Eno LEROY · Web Developper">
+  <meta property="og:description" content="Portfolio">
+  <meta property="og:url" content="https://enoleroy.github.io/portfolio-page">
+  <meta property="og:type" content="website">
+  <!-- Favicon -->
+  <!-- <link rel="icon" href="assets/images/slime.gif" type="image/gif"> -->
+
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Chivo:700|Overpass:400,700&display=swap" rel="stylesheet">
 
