--- a/project-monster-slicer.html
+++ b/project-monster-slicer.html
@@ -30,8 +30,8 @@
   <div class="navbar">
     <a href="index.html#presentation">> Acceuil</a>
     <a href="index.html#projects">> Projets</a>
-    <a href="index.html#interets">> Intérêts</a>
     <a href="index.html#cv">> CV</a>
+    <!-- <a href="index.html#interets">> Intérêts</a> -->
   </div>
 
   
