--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="presentation-container">
       <div class="presentation-text">
         <p>
-          Je suis Eno LEROY, un développeur web junior en reconversion professionnelle, passionné par le développement et la technologie. J'ai acquis des compétences solides en HTML, CSS et JavaScript, ainsi qu'une expérience avec le framework Ruby on Rails.
+          Je suis Eno LEROY, développeur web junior en reconversion professionnelle, passionné par le développement et la technologie. J'ai acquis des compétences solides en HTML, CSS et JavaScript, ainsi qu'une expérience avec le framework Ruby on Rails.
         </p>
 
         <p>
@@ -135,21 +135,21 @@
         <p>Travail d'équipe</p>
         <p>Anglais (TOEIC 915)</p>
         <p>Dessin Assisté par Ordinateur (AutoCAD, MicroStation, Procreate)</p>
-        <p>Scan 3D (Scene)</p>
-        <p>Maquette 3D (???)</p>
+        <p>Scan 3D (Logiciel Scene)</p>
+        <!-- <p>Maquette 3D (???)</p> -->
       </div>
     </div>
     
     <div class="cv-section">
       <h3>Expériences Professionnelles</h3>
       <div class="cv-item">
-        <p><strong>Teacher Assistant (Freelance)</strong> - Le Wagon Paris (2024)</p>
+        <p><strong>Teacher Assistant (Freelance)</strong> - Le Wagon Paris (2023-présent)</p>
       </div>
       <div class="cv-item">
-        <p><strong>Dessinateur Projeteur</strong> -  Mairie de Saint-Germain-en-Laye (2022)</p>
+        <p><strong>Dessinateur Projeteur</strong> -  Mairie de Saint-Germain-en-Laye (2021-2022)</p>
       </div>
       <div class="cv-item">
-        <p><strong>Chef d'équipe Dessinateur-Modelisateur</strong> - Elliva, Châlons-en-Champagne (2016)</p>
+        <p><strong>Chef d'équipe Dessinateur-Modelisateur</strong> - Elliva, Châlons-en-Champagne (2016-2020)</p>
       </div>
     </div>
     <!-- telechargement CV  -->
@@ -171,6 +171,10 @@
     </div>
   </div> -->
 
+  <div class="footer">
+
+
+  </div>
 
 </body>
 </html>
