update cv et modif monster slicer

--- a/project-monster-slicer.html
+++ b/project-monster-slicer.html
@@ -59,11 +59,11 @@
             Repo GitHub du projet de groupe
           </button>
         </a>
-        <a href="">
+        <!-- <a href="">
           <button>
             Page statique du jeu en JavaScript
           </button>
-        </a>
+        </a> -->
       </div>
       <div class="image-container">
         <div class="video-container">
