--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 
 
         <div class="cv-card-container">
-          <div class="cv-card">
-            <div class="card-front playfair-display-font">
+          <div class="cv-card" style="background-image: url('assets/images/cv_diplomes.png');">
+            <div class=" blur card-front playfair-display-font">
               <h3>Diplômes</h3>
             </div>
             <div class="card-back playfair-display-font">
@@ -121,8 +121,8 @@
         </div>
 
         <div class="cv-card-container">
-          <div class="cv-card">
-            <div class="card-front playfair-display-font">
+          <div class="cv-card" style="background-image: url('assets/images/cv_competances.png');">
+            <div class="blur card-front playfair-display-font">
               <h3>Développement Web</h3>
             </div>
             <div class="card-back playfair-display-font">
@@ -142,13 +142,13 @@
         </div>
 
         <div class="cv-card-container">
-          <div class="cv-card">
-            <div class="card-front playfair-display-font">
+          <div class="cv-card" style="background-image: url('assets/images/cv_experience.png');">
+            <div class="blur card-front playfair-display-font">
               <h3>Expériences Professionnelles</h3>
             </div>
             <div class="card-back playfair-display-font">
               <div class="cv-card-content">
-                <p><strong>Teacher Assistant (Freelance)</strong> - Le Wagon Paris (2023-présent)</p>
+                <p><strong>Teacher Assistant (Freelance)</strong> - Le Wagon Paris (2023-2024)</p>
                 <p><strong>Dessinateur Projeteur</strong> -  Mairie de Saint-Germain-en-Laye (2021-2022)</p>
                 <p><strong>Chef d'équipe Dessinateur-Modelisateur</strong> - Elliva, Châlons-en-Champagne (2016-2020)</p>
               </div>
@@ -217,7 +217,7 @@
     <!-- telechargement CV  -->
     <!-- <a href="fichier.pdf" download  >télécharger</a> -->
 
-    <a href="assets/other/Eno LEROY - CV - 2025.pdf">
+    <a href="assets/other/Eno LEROY - CV - 2025.pdf" style="margin-bottom: 50px;">
       <button>
         Télécharger mon CV
       </button>
